@@ -5,6 +5,9 @@ cdebconf-entropy (0.9) UNRELEASED; urgency=low
     row before refreshing the interface.
   * In the GTK+ plugin, allow_continue() now properly handle GDK threads.
     This prevent race issues in the display of the success message.
+  * Fix minor usability issues in the GTK+ plugin:
+    - Display the help text in a similar way than normal extended
+      descriptions.
 
  -- Jérémy Bobbio <lunar@debian.org>  Thu, 08 May 2008 13:37:50 +0000
 
